@@ -10,5 +10,7 @@ if [ -n "${JAVA_ENABLE_DEBUG}" ] && [ "${JAVA_ENABLE_DEBUG}" != "false" ]; then
     java_debug_args="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=${JAVA_DEBUG_PORT:-5005}"
 fi
 
+java_opts_preview="--enable-preview"
+
 # Execute the Java application with the provided arguments
 exec java ${java_debug_args} ${JAVA_OPTS} ${JAVA_ARGS} -jar /opt/egov/*.jar
